// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputCheckbox component should render correctly 1`] = `
<Styled(View)
  id="checkbox"
  isChecked={false}
  onClick={[MockFunction]}
  onStartShouldSetResponder={[Function]}
  rightText="checkbox"
  val=""
>
  <Styled(Image)
    source={
      Object {
        "testUri": "../../../../core/src/assets/store-locator-checked.png",
      }
    }
  />
  <Styled(BodyCopy)
    fontSize="fs12"
    mobileFontFamily="secondary"
    text="checkbox"
  />
</Styled(View)>
`;

exports[`InputCheckbox component should render correctly with checked state false 1`] = `
<Styled(View)
  id="checkbox"
  isChecked={false}
  onClick={[MockFunction]}
  onStartShouldSetResponder={[Function]}
  rightText="checkbox"
  val=""
>
  <Styled(Image)
    source={
      Object {
        "testUri": "../../../../core/src/assets/store-locator-check.png",
      }
    }
  />
  <Styled(BodyCopy)
    fontSize="fs12"
    mobileFontFamily="secondary"
    text="checkbox"
  />
</Styled(View)>
`;
